
SET( INTERSHELL_IMAGES
AnimationWizard1.mng
Pressed-Lens.png
colorLayer.png
default-Lens.png
defaultLens.png
pressedLens.png
ridge.png
ridge_down.png
ridge_up.png
round_mask.png
round_ridge_down.png
round_ridge_up.png
square_mask.png
)




INSTALL( 
  FILES
    ${INTERSHELL_IMAGES}
  DESTINATION
    ${DATA_INSTALL_PREFIX}/images
)




