
PROJECT( testdata )
SET( TEST_IMAGES background.jpg daub.png playagain.jpg playing.jpg
sky.jpg slot_strip.2.jpg slot_strip.jpg )
INSTALL( 
  FILES
    ${TEST_IMAGES}
  DESTINATION
    ${DATA_INSTALL_PREFIX}/images
)



PROJECT( test_display1 )
SET( PROJECT_SOURCES test )

ADD_EXECUTABLE( ${PROJECT_NAME} ${FIRST_GCC_PROGRAM_SOURCE} ${PROJECT_SOURCES} ${LAST_GCC_PROGRAM_SOURCE} )
if( C++ )
GET_TARGET_PROPERTY(SOURCES ${PROJECT_NAME} SOURCES)
set_source_files_properties( ${SOURCES} PROPERTIES LANGUAGE "CXX" )
endif()
message( ${SOURCES} )
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS  "-DTARGET_LABEL=${PROJECT_NAME}" )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${SACK_LIBRARY} )


PROJECT( test_display2 )
SET( PROJECT_SOURCES test2 )

ADD_EXECUTABLE( ${PROJECT_NAME} ${FIRST_GCC_PROGRAM_SOURCE} ${PROJECT_SOURCES} ${LAST_GCC_PROGRAM_SOURCE} )
if( C++ )
GET_TARGET_PROPERTY(SOURCES ${PROJECT_NAME} SOURCES)
set_source_files_properties( ${SOURCES} PROPERTIES LANGUAGE "CXX" )
endif()
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS  "-DTARGET_LABEL=${PROJECT_NAME}" )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${SACK_LIBRARY} )


PROJECT( test_display3 )
SET( PROJECT_SOURCES test3 )

ADD_EXECUTABLE( ${PROJECT_NAME} ${FIRST_GCC_PROGRAM_SOURCE} ${PROJECT_SOURCES} ${LAST_GCC_PROGRAM_SOURCE} )
if( C++ )
GET_TARGET_PROPERTY(SOURCES ${PROJECT_NAME} SOURCES)
set_source_files_properties( ${SOURCES} PROPERTIES LANGUAGE "CXX" )
endif()
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS  "-DTARGET_LABEL=${PROJECT_NAME}" )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${SACK_LIBRARY} )

PROJECT( test_display4 )
SET( PROJECT_SOURCES test4 )

ADD_EXECUTABLE( ${PROJECT_NAME} ${FIRST_GCC_PROGRAM_SOURCE} ${PROJECT_SOURCES} ${LAST_GCC_PROGRAM_SOURCE} )
if( C++ )
GET_TARGET_PROPERTY(SOURCES ${PROJECT_NAME} SOURCES)
set_source_files_properties( ${SOURCES} PROPERTIES LANGUAGE "CXX" )
endif()
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS  "-DTARGET_LABEL=${PROJECT_NAME}" )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${SACK_LIBRARY} )
